# nitorch-cli

./: README.md  pyproject.toml  setup.cfg  setup.py
nitorch_cli/: entrypoint.py  parser.py  registry.yml
