[metadata]
name = nitorch-cli
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Command-line interface for nitorch
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/nitorch/nitorch-cli

[options]
python_requires = >= 3.6
install_requires = pyyaml

[options.package_data]
* = *.yml

[options.entry_points]
console_scripts =
    nitorch = nitorch_cli.entrypoint:nitorch